# Smart_sticky-notes-with-save-data-

./: LOCKED_WIDGET_README.md  QUICK_START.md  README.md  WIDGET_README.md  desktop_widget_simple.py  launch_widget.bat  run_sticky_notes.bat  run_sticky_notes.ps1  setup_auto_start.bat  startup_instructions.txt
app/: AUTO_START_GUIDE.md  MANIFEST.in  MULTI_INSTANCE_GUIDE.md  README.md  SETUP_GUIDE.md  SOLUTION_SUMMARY.md  Smart_Notes_Manager.pyw  Start_Smart_Notes.bat  TECHNICAL_DOCUMENTATION.txt  auto_start_registry.py  build_exe.py  create_shortcut.bat  demo_multi_instance.py  diagnose_auto_start.py  enable_auto_start.bat  index.html  install.bat  instance_controller.pyw  launch.bat  launch_controller.bat  launch_controller.ps1  launch_controller.py  launch_controller_no_console.bat  launch_instance_manager.bat  launch_manager.py  launch_no_console.bat  launch_widget.bat  main.py  manager.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run_demo.bat  run_no_console.pyw  settings.html  simple_controller.pyw  standalone_instance_manager.py  start_instance_manager.bat  start_main_app.bat  (+6 more)
app/other files/src/: sticky_notes_widget.py
app/src/: instance_controller.py  main.js  note-window.html  sticky_notes_widget.py
app/src/main/: main.js
app/src/renderer/: main.tsx  manager.tsx  settings.tsx
app/src/renderer/components/NoteWindow/: ColorPicker.tsx  ContextMenu.tsx  Editor.tsx  MarkdownPreview.tsx  NoteWindow.css  NoteWindow.tsx  SearchBar.tsx  SettingsPanel.tsx  StatusBar.tsx  TagsBar.tsx  TitleBar.tsx
app/src/renderer/store/: store.ts
app/src/renderer/store/slices/: analyticsSlice.ts  noteSlice.ts  settingsSlice.ts  uiSlice.ts
app/src/renderer/styles/: global.css
old app with cmd line/app/: README.md  launch.bat  launch.ps1  main.py  setup.py
