[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-notes-widget"
version = "1.0.0"
description = "A modern desktop sticky notes widget application"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Smart Notes Team", email = "support@smartnotes.com"}
]
maintainers = [
    {name = "Smart Notes Team", email = "support@smartnotes.com"}
]
keywords = ["sticky notes", "desktop widget", "productivity", "notes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
dependencies = [
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.scripts]
smart-notes = "main:main"

[project.urls]
Homepage = "https://github.com/smartnotes/widget"
Documentation = "https://github.com/smartnotes/widget/blob/main/README.md"
Repository = "https://github.com/smartnotes/widget"
"Bug Tracker" = "https://github.com/smartnotes/widget/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["assets/*"] 